--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.1.2",
     "styled-components": "^5.0.1",
     "styled-components-modifiers": "^1.2.5",
     "web-vitals": "^1.1.2"
