--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "dependencies": {
     "@babel/core": "^7.14.3",
     "@babel/preset-env": "^7.14.2",
+    "@storybook/addon-docs": "^6.3.0-alpha.34",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "actions": "^1.3.0",
     "polished": "^4.1.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-scripts": "4.0.3",
     "react-spring": "^9.1.2",
     "styled-components": "^5.0.1",
@@ -54,11 +56,12 @@
     ]
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^6.2.9",
-    "@storybook/addon-essentials": "^6.2.9",
-    "@storybook/addon-links": "^6.2.9",
-    "@storybook/node-logger": "^6.2.9",
+    "@storybook/addon-actions": "^6.3.0-alpha.34",
+    "@storybook/addon-backgrounds": "^6.3.0-alpha.34",
+    "@storybook/addon-essentials": "^6.3.0-alpha.34",
+    "@storybook/addon-links": "^6.3.0-alpha.34",
+    "@storybook/node-logger": "^6.3.0-alpha.34",
     "@storybook/preset-create-react-app": "^3.1.7",
-    "@storybook/react": "^6.2.9"
+    "@storybook/react": "^6.3.0-alpha.34"
   }
 }
